# libvc

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  THANKS  TODO  configure.ac  libvc.spec  libvc.spec_rh
doc/: Makefile.am  vc.3
patches/: fix-segfault.patch  improve-parsing-time-large-vcards.patch
src/: .gitignore  Makefile.am  vc.c  vc.h  vc_parse.y  vc_scan.l
test/: Makefile.am  run-tests
